enhance products endpoints and remove search
